Updated Files Ill take a break now

--- a/product.html
+++ b/product.html
@@ -26,18 +26,26 @@
 
 <div class="content_Main_Span"><img class="image_fit" src="images/T_is_beautiful.png"/></div>
 
-<div class="content_boxed_one"> 1</div>
+<div class="content_boxed_one">
+    <p class="item_title">Winter</p>
+    <img class="image_fitted" src="images/the_wardrobe.png"/>
+    <button class="button_web_design" id="btn_winter_submit"> Learn more</button>
+</div>
 
-<div class="content_boxed_two">2</div>
+<div class="content_boxed_two">
+    <p class="item_title">Summer</p>
+    <img class="image_fitted" src="images/glass_ice.png"/>
+    <button class="button_web_design" id="btn_summer_submit"> Learn more</button>
+</div>
 
-<div class="content_boxed_three">3</div>
 
-<div class="content_boxed_four">4</div>
+<div class="content_boxed_three">
+    <p class="item_title"> Culture</p>
+    <img class="image_fitted" src="images/roses_are_red.png"/>
+    <button class="button_web_design" id="btn_culture_submit"> Learn more</button>
+</div>
 
-<div class="content_boxed_five">5</div>
-
-<div class="content_boxed_five_plus_one">6</div>
-
-<div class="footer">footer</div>
+<div class="footer"><img class="image_fit" src="images/fancy_footer.png"/></div>
+</div>
 </body>
 </html>
