Going for exams update
I made some small changes but I'll have to stop now because exams are starting soon

--- a/about.html
+++ b/about.html
@@ -12,26 +12,96 @@
 
 <div class="container"><!--To make sure the website is in the grid format and operates like a puzzle-->
 
-<div class="website_Banner"><img class="banner" src="images/styled_simplistic.png" alt="a piece of clothing."/></div><!--Banner-->
+<div class="website_Banner"><img class="banner" src="images/white_is_beautiful.png" alt="a piece of clothing."/></div><!--Banner-->
 
 <div class="navigation_Bar">
+  <div class="hamburger" onclick="toggleMenu()">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
   <ul class="centered_content">
-    <li class="link_design" ><a class="link" href="index.html">Home</a></li>
-    <li class="link_design" ><a class="link" href="product.html">Clothing & Accessroies</a></li>
-    <li class="link_design" ><a class="active" href="about.html">About</a></li>
-    <li class="link_design" ><a class="link" href="contact.html">Contact</a></li>
-    <li class="link_design" ><a class="link" href="checkout.html">Checkout</a></li>
+    <li class="link_design"><a class="link" href="index.html">Home</a></li>
+    <li class="link_design"><a class="link" href="product.html">Clothing & Accessroies</a></li>
+    <li class="link_design"><a class="active" href="about.html">About</a></li>
+    <li class="link_design"><a class="link" href="contact.html">Contact</a></li>
+    <li class="link_design"><a class="link" href="checkout.html">Checkout</a></li>
   </ul>
 </div><!--To navigate between webpages-->
 
 <div class="content_Main_Span"><img class="image_fit" src="images/T_is_beautiful.png"/></div>
 
-<div class="content_boxed_one"> 1</div>
+<div class="content_boxed_one">
+  <h class="title_header">The Story</h>
+  <p class="paragraph_about_design">
+    Following a desire to educate a small team of individuals Sharon McKeny and James Westman began the company Geordie Apparel,
+    a clothing brand with the objective of creating family-friendly, quality, affordable clothing. The idea was a hit and brought about many customers,
+    The stores were not enough to handle and reach out to all of the customers and so the company decidded to make some changes.
+    A year later, Geordie Apparel moved all focus to online stores. 
+   <em>We've got the best threads in the toon</em> 
+  </p>
+  </div>
 
-<div class="content_boxed_two">2</div>
+<div class="content_boxed_two">
+  <h class="title_header">The Experience</h>
+  <p class="paragraph_about_design">
+    Owners here at 'Geordie Apparels' work to give you personalized services, specialist features and more,
+    everyday of the week at your convenience. So that more people can learn about our services, we are moving online.
+    You will be able to book a stylist of your choice, make complex orders allowing them to purchase 
+    items in bulk, or request custom orders.This service has been so successful that Sharon and James 
+     are now expanding it with an online booking system on their upcoming website, allowing customers to 
+     schedule consultations effortlessly.
+  </p>
 
-<div class="content_boxed_three">3</div>
 
-<div class="footer">footer</div>
+</div>
+
+<div class="content_boxed_three">
+  <h class="title_header">The Choice</h>
+  <p class="paragraph_about_design">
+    After noticing a growing demand for personal clothing to complement a persons nature, We hhere at Geordie Apparel
+    have decided on making few significant changes. Introducing <em>personal-stylists</em>. We have also extended working hours from 6:00pm to 8:00pm.
+    For the late night emergencies.
+  </p>
+</div>
+
+<div class="content_boxed_span">
+                            <h class="page_section_title_designed">What Customers are Saying About Geordie Apparel</h>
+    <div class="review">
+      <p class="paragraph_review_design">“I just stumbled across this website, when I was going through my student's websites when i Learned about 'Geordie Apparel.'
+          My first impression was that this site was just another clothing capitalist. But I must say, the way that the brand goes above and beyond
+          just to help customers find 'the perfect outfit.' I am more than likely to shop here for all my designer needs. It was so good, I had to leave a review.'
+          <br>
+
+          <div class="rating"><img class="rating_fit" src="images/5STARS.png"/></div>
+      <p class="commentery_name">- Zoey101</p></p>
+      <br><br>
+    </div>
+
+    <div class="review">
+      <p class="paragraph_review_design">“So apparently you can request a custom designer. Did you hear that? YOURE OWN DESIGNER. The brands 
+          shows you a list of designers who can make any idea into existence.
+          Perfect for my upcoming wedding apparels. I had to leave a review, Geordie Apparel, is a game changer!
+        <br>
+
+        <div class="rating"><img class="rating_fit" src="images/4STARS.png"/></div>
+      <p class="commentery_name">- NightGuy</p></p>
+      <br><br>
+    </div>
+
+    <div class="review">
+      <p class="paragraph_review_design">"Okay, I must say, I wasn't so sure that these guys could pull it off after I left them with the workloads,
+          Found out today from an old friend that the brand had grown in leaps and bounds. Had to come and check it out. I must say, it is pretty good...But *character limit reached.*
+        <br>
+
+        <div class="rating"><img class="rating_fit" src="images/2STARS.png"/></div>
+      <p class="commentery_name">- B&Btrolls</p></p>
+      <br><br>
+    </div>
+
+    
+<div class="footer"><img class="image_fit  corner_round"src="images/footer_cream.png"/></div><!--I learned that you can have more than one class in an object.-->
+
+<script src="script.js"></script>
 </body>
 </html>
