--- a/checkout.html
+++ b/checkout.html
@@ -12,7 +12,7 @@
 
 <div class="container"><!--To make sure the website is in the grid format and operates like a puzzle-->
 
-<div class="website_Banner"><img class="banner" src="images/styled_simplistic.png" alt="a piece of clothing."/></div><!--Banner-->
+<div class="website_Banner"><img class="banner w_b" src="images/5STARS.png" alt="a piece of clothing."/></div><!--Banner-->
 
 <div class="navigation_Bar">
   <ul class="centered_content">
@@ -24,13 +24,13 @@
   </ul>
 </div><!--To navigate between webpages-->
 
-<div class="content_Main_Span"><img class="image_fit" src="images/T_is_beautiful.png"/></div>
+<div class="content_Main_Span"><img class="image_fit" src="images/appreciation.png"/></div>
 
-<div class="content_boxed_one"> 1</div>
+<div class="content_display_purchase"><div id="output" class="item_list"></div></div>
 
-<div class="content_boxed_two">2</div>
+<div class="content_price_summary">amount</div>
 
-<div class="content_boxed_three">3</div>
+<div class="content_confirmation"><div class="yes/no"></div>Yes No</div>
 
 <div class="footer">footer</div>
 </body>
