--- a/index.html
+++ b/index.html
@@ -15,22 +15,27 @@
 <div class="website_Banner"><img class="banner" src="images/styled_simplistic.png" alt="a piece of clothing."/></div><!--Banner-->
 
 <div class="navigation_Bar">
+  <div class="hamburger" onclick="toggleMenu()">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
   <ul class="centered_content">
-    <li class="link_design" ><a class="active" href="index.html">Home</a></li>
-    <li class="link_design" ><a class="link" href="product.html">Clothing & Accessroies</a></li>
-    <li class="link_design" ><a class="link" href="about.html">About</a></li>
-    <li class="link_design" ><a class="link" href="contact.html">Contact</a></li>
-    <li class="link_design" ><a class="link" href="checkout.html">Checkout</a></li>
+    <li class="link_design"><a class="active" href="index.html">Home</a></li>
+    <li class="link_design"><a class="link" href="product.html">Clothing & Accessories</a></li>
+    <li class="link_design"><a class="link" href="about.html">About</a></li>
+    <li class="link_design"><a class="link" href="contact.html">Contact</a></li>
+    <li class="link_design"><a class="link" href="checkout.html">Checkout</a></li>
   </ul>
 </div><!--To navigate between webpages-->
 
 <div class="content_Main_Span"><img class="image_fit" src="images/T_is_beautiful.png"/></div>
 
-<div class="content_boxed_one"><img id="deals_info" class="image_fit" src="images/o_on_w_sales_content.png"/></div>
+<div class="content_boxed_one"><button class="btn_styled" onclick="window.location.href='product.html'"><img id="deals_info" class="image_fit" src="images/sales.png"/></button></div>
 
-<div class="content_boxed_two"><img id="water_hoops_info" class="image_fit" src="images/my_phone_is_linging.png"/></div>
+<div class="content_boxed_two"><button class="btn_styled" onclick="window.location.href='contact.html'"><img id="water_hoops_info" class="image_fit" src="images/contact.png"/></button></div>
 
-<div class="content_boxed_three"><img id="author" class="image_fit" src="images/why_dont_u_call.png"/></div>
+<div class="content_boxed_three"><button class="btn_styled" onclick="window.location.href='about.html'"><img id="author" class="image_fit" src="images/about.png"/></button></div>
 
 <div class="footer"><img class="image_fit" src="images/fancy_footer.png"/></div>
 <script src="script.js"></script>
