I made some changes and want to get this page online
I wish to see that the webpage can indeed be accessed over the net

--- a/about.html
+++ b/about.html
@@ -8,11 +8,11 @@
   <meta name="CocoaVersion" content="2113.65">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> <!--Link to resource for my about page wireframe design 'https://wireframe.cc/nb7O5b'-->
 
 <div class="container"><!--To make sure the website is in the grid format and operates like a puzzle-->
 
-<div class="website_Banner"><img class="banner" src="images/white_is_beautiful.png" alt="a piece of clothing."/></div><!--Banner-->
+<div class="website_Banner"><img class="banner" src="images/banners/white_is_beautiful.png" alt="banner image showcasing a piece of clothing."/></div><!--Banner-->
 
 <div class="navigation_Bar">
   <div class="hamburger" onclick="toggleMenu()">
@@ -29,7 +29,7 @@
   </ul>
 </div><!--To navigate between webpages-->
 
-<div class="content_Main_Span"><img class="image_fit" src="images/T_is_beautiful.png"/></div>
+<div class="content_Main_Span"><img class="image_fit" src="images/banners/appreciation.png" alt="love_does_wonders_so_does_the_mind"/></div>
 
 <div class="content_boxed_one">
   <h class="title_header">The Story</h>
