--- a/contact.html
+++ b/contact.html
@@ -8,21 +8,27 @@
   <meta name="CocoaVersion" content="2113.65">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body>        <!--BE able to contact the team or make requests for different artists to help you make a recomendation-->
 
 <div class="container"><!--To make sure the website is in the grid format and operates like a puzzle-->
 
 <div class="website_Banner"><img class="banner" src="images/styled_simplistic.png" alt="a piece of clothing."/></div><!--Banner-->
 
 <div class="navigation_Bar">
+  <div class="hamburger" onclick="toggleMenu()">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
   <ul class="centered_content">
-    <li class="link_design" ><a class="link" href="index.html">Home</a></li>
-    <li class="link_design" ><a class="link" href="product.html">Clothing & Accessroies</a></li>
-    <li class="link_design" ><a class="link" href="about.html">About</a></li>
-    <li class="link_design" ><a class="active" href="contact.html">Contact</a></li>
-    <li class="link_design" ><a class="link" href="checkout.html">Checkout</a></li>
+    <li class="link_design"><a class="link" href="index.html">Home</a></li>
+    <li class="link_design"><a class="link" href="product.html">Clothing & Accessroies</a></li>
+    <li class="link_design"><a class="active" href="about.html">About</a></li>
+    <li class="link_design"><a class="link" href="contact.html">Contact</a></li>
+    <li class="link_design"><a class="link" href="checkout.html">Checkout</a></li>
   </ul>
 </div><!--To navigate between webpages-->
+
 
 <div class="content_Main_Span"><img class="image_fit" src="images/T_is_beautiful.png"/></div>
 
@@ -35,3 +41,16 @@
 <div class="footer">footer</div>
 </body>
 </html>
+
+
+<!--Criteria Helper
+
+Home page
+
+Product page
+
+Contact Page
+
+About page
+
+Checkout page-->
