--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <meta name="CocoaVersion" content="2113.65">
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> <!--Made to follow wireframe template. Source from 'https://wireframe.cc/ms8rUm'-->
 
 <div class="container"><!--To make sure the website is in the grid format and operates like a puzzle-->
 
-<div class="website_Banner"><img class="banner" src="images/styled_simplistic.png" alt="a piece of clothing."/></div><!--Banner-->
+<div class="website_Banner"><img class="banner" src="images/banners/styled_simplistic.png" alt="a piece of clothing."/></div><!--Banner-->
 
 <div class="navigation_Bar">
   <div class="hamburger" onclick="toggleMenu()">
@@ -29,15 +29,15 @@
   </ul>
 </div><!--To navigate between webpages-->
 
-<div class="content_Main_Span"><img class="image_fit" src="images/T_is_beautiful.png"/></div>
+<div class="content_Main_Span"><img class="image_fit" src="images/content/page_filler/banner_pro.png"/></div>
 
-<div class="content_boxed_one"><button class="btn_styled" onclick="window.location.href='product.html'"><img id="deals_info" class="image_fit" src="images/sales.png"/></button></div>
+<div class="content_boxed_one"><button class="btn_styled" onclick="window.location.href='product.html'"><img id="deals_info" class="image_fit" src="images/content/content_filler/sales.png"/></button></div>
 
-<div class="content_boxed_two"><button class="btn_styled" onclick="window.location.href='contact.html'"><img id="water_hoops_info" class="image_fit" src="images/contact.png"/></button></div>
+<div class="content_boxed_two"><button class="btn_styled" onclick="window.location.href='contact.html'"><img id="water_hoops_info" class="image_fit" src="images/content/content_filler/contact.png"/></button></div>
 
-<div class="content_boxed_three"><button class="btn_styled" onclick="window.location.href='about.html'"><img id="author" class="image_fit" src="images/about.png"/></button></div>
+<div class="content_boxed_three"><button class="btn_styled" onclick="window.location.href='about.html'"><img id="author" class="image_fit" src="images/content/content_filler/about.png"/></button></div>
 
-<div class="footer"><img class="image_fit" src="images/fancy_footer.png"/></div>
+<div class="footer"><img class="image_fit" src="images/footers/footer_brown.png"/></div>
 <script src="script.js"></script>
 </body>
 </html>
