--- a/product.html
+++ b/product.html
@@ -12,7 +12,7 @@
 
 <div class="container"><!--To make sure the website is in the grid format and operates like a puzzle-->
 
-<div class="website_Banner"><img class="banner" src="images/styled_simplistic.png" alt="a piece of clothing."/></div><!--Banner-->
+<div class="website_Banner"><img class="banner" src="images/banners/styled_simplistic.png" alt="a piece of clothing."/></div><!--Banner-->
 
 <div class="navigation_Bar">
   <div class="hamburger" onclick="toggleMenu()">
@@ -29,7 +29,7 @@
   </ul>
 </div><!--To navigate between webpages-->
 
-<div class="content_Main_Span"><img class="image_fit" src="images/T_is_beautiful.png"/></div>
+<div class="content_Main_Span"><img class="image_fit" src="images/content/page_filler/clothing_on_the_go.jpg"/></div>
 
 <div class="content_boxed_one">
     <p class="item_title">Winter</p>
